<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="org.codeforkobe.eventmap.ui.EventDetailActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">
            <include
                    layout="@layout/toolbar"
                    app:layout_scrollFlags="scroll|enterAlways"/>
        </android.support.design.widget.AppBarLayout>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/cardview_light_background"
                    app:cardUseCompatPadding="true">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/common_spacing_l"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/summary"
                            style="@style/TextAppearance.AppTheme.Label"/>
                    <TextView
                            android:id="@+id/text_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                    <include layout="@layout/divider"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            style="@style/TextAppearance.AppTheme.Label"/>
                    <TextView
                            android:id="@+id/text_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:autoLink="web"/>
                    <include layout="@layout/divider"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/event_start_date"
                            style="@style/TextAppearance.AppTheme.Label"/>
                    <TextView
                            android:id="@+id/text_event_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                    <include layout="@layout/divider"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/event_end_date"
                            style="@style/TextAppearance.AppTheme.Label"/>
                    <TextView
                            android:id="@+id/text_event_end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                    <include layout="@layout/divider"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            style="@style/TextAppearance.AppTheme.Label"/>
                    <TextView
                            android:id="@+id/text_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                    />
                    <include layout="@layout/divider"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/contact"
                            style="@style/TextAppearance.AppTheme.Label"/>
                    <TextView
                            android:id="@+id/text_contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:autoLink="all"
                    />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
